kubernetes/apps/infrastructure/crunchy-postgres-operator/app/network-policy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: pgo-network-policy
spec:
  endpointSelector:
    matchLabels:
      postgres-operator.crunchydata.com/control-plane: pgo
  ingress:
    # nothing allowed
    - {}
  egress:
    - toEntities:
      - kube-apiserver
